--- a/code.html
+++ b/code.html
@@ -11,11 +11,12 @@
     .container {
       display: grid;
       grid-template-columns: auto 1fr;
-      grid-gap: 10px;
+      grid-gap: 5x;
       padding: 10px;
       background-color: #fff5eb;
       border: 1px solid #ccc;
       border-radius: 24px;
+
     }
 
     .left-side {
@@ -28,7 +29,7 @@
 
     .left-photo {
       width: 100%;
-      height: 605px;
+      height: 660px;
     }
 
     .photo {
@@ -40,25 +41,27 @@
     .photo1 {
       grid-column: 2;
       grid-row: 1;
-      width: 40%;
+      width: 46%;
     }
 
     .photo2 {
       grid-column: 2;
       grid-row: 1;
-      width: 23%;
+      width: 27%;
+      height: 290px;
+
     }
 
     .photo3 {
       grid-column: 2;
       grid-row: 1;
-      width: 23%;
+      width: 26%;
     }
 
     .photo4 {
       grid-column: 2;
       grid-row: 2;
-      width: 87%;
+      width: 100%;
     }
 
     h1 {
