--- a/code.html
+++ b/code.html
@@ -6,34 +6,42 @@
   <style>
     body {
       background-color: #fffff;
+      padding: 20px; 
     }
 
     .container {
       display: grid;
       grid-template-columns: auto 1fr;
-      grid-gap: 5x;
-      padding: 10px;
+      grid-gap: 5px;
+      padding: 10px; 
       background-color: #fff5eb;
       border: 1px solid #ccc;
       border-radius: 24px;
-
+      margin: 20px; 
+      box-shadow: 10 10 40px rgba(0, 0, 0, 0.1); /* Added box-shadow */
     }
 
     .left-side {
       grid-column: 1;
       grid-row: 1 / span 4;
       width: 100%;
-      padding: 5px;
+      padding: 10px;
       box-sizing: border-box;
+      margin-left: 15px; 
     }
 
     .left-photo {
       width: 100%;
-      height: 660px;
+      height: 615px;
+      margin-top: 15px; 
+    }
+
+    .right-photos {
+      margin-left: 25px;
     }
 
     .photo {
-      width: 100%;
+      width: 95%;
       padding: 5px;
       box-sizing: border-box;
     }
@@ -41,34 +49,40 @@
     .photo1 {
       grid-column: 2;
       grid-row: 1;
-      width: 46%;
+      width: 44%;
+      height: 280px;
+      margin-top: 15px; 
     }
 
     .photo2 {
       grid-column: 2;
       grid-row: 1;
-      width: 27%;
-      height: 290px;
-
+      width: 26%;
+      height: 280px;
+      margin-top: 15px; 
     }
 
     .photo3 {
       grid-column: 2;
       grid-row: 1;
-      width: 26%;
+      width: 27%;
+      height: 280px;
+      margin-top: 15px; 
     }
 
     .photo4 {
       grid-column: 2;
       grid-row: 2;
-      width: 100%;
+      width: 98%;
+      height: 345px;
+      margin-bottom: 0.5px;
     }
 
     h1 {
-     font-family: Laila;
+      font-family: Laila;
       text-align: left;
       margin-top: 0;
-
+      margin-left: 20px;
     }
   </style>
 </head>
